tests/NormalTests/paczka1/small_fuzzy/18977534.err
Error in line 8: jYyg S0 27,6
Error in line 11: jYyg S0 16,8
Error in line 13: hat5EI34KTt S0 56,8
Error in line 15: hat5EI34KTt S0 39,8
